--- a/ProjectBeluga/ProjectBeluga/ProjectBeluga.vcxproj
+++ b/ProjectBeluga/ProjectBeluga/ProjectBeluga.vcxproj
@@ -110,7 +110,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="BLog.cpp" />
+    <ClCompile Include="BLogChannel.cpp" />
     <ClCompile Include="main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="BLog.h" />
+    <ClInclude Include="BLogChannel.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
