Various util additions, not very polished

--- a/ProjectBeluga/ProjectBeluga/ProjectBeluga.vcxproj
+++ b/ProjectBeluga/ProjectBeluga/ProjectBeluga.vcxproj
@@ -113,10 +113,15 @@
     <ClCompile Include="BLog.cpp" />
     <ClCompile Include="BLogChannel.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Timestamp.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BLog.h" />
     <ClInclude Include="BLogChannel.h" />
+    <ClInclude Include="KVPair.h" />
+    <ClInclude Include="Node.h" />
+    <ClInclude Include="LinkedList.h" />
+    <ClInclude Include="Timestamp.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
