--- a/ProjectBeluga/ProjectBeluga/ProjectBeluga.vcxproj.filters
+++ b/ProjectBeluga/ProjectBeluga/ProjectBeluga.vcxproj.filters
@@ -16,6 +16,9 @@
     <Filter Include="Source Files\Debug">
       <UniqueIdentifier>{071656a9-b927-41be-b1cf-ac4f499e4894}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\Util">
+      <UniqueIdentifier>{b4194f9f-e926-4c2d-9811-15abe0831174}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -27,6 +30,9 @@
     <ClCompile Include="BLogChannel.cpp">
       <Filter>Source Files\Debug</Filter>
     </ClCompile>
+    <ClCompile Include="Timestamp.cpp">
+      <Filter>Source Files\Util</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BLog.h">
@@ -34,6 +40,18 @@
     </ClInclude>
     <ClInclude Include="BLogChannel.h">
       <Filter>Source Files\Debug</Filter>
+    </ClInclude>
+    <ClInclude Include="Node.h">
+      <Filter>Source Files\Util</Filter>
+    </ClInclude>
+    <ClInclude Include="KVPair.h">
+      <Filter>Source Files\Util</Filter>
+    </ClInclude>
+    <ClInclude Include="Timestamp.h">
+      <Filter>Source Files\Util</Filter>
+    </ClInclude>
+    <ClInclude Include="LinkedList.h">
+      <Filter>Source Files\Util</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
